--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:caroliskiwitch@gmail.com">email</a></li>
+				<li><img src="grass_oval.png" alt="Carol Iskiwitch"> </li>
+				<li><a href="mailto:caroliskiwitch@gmail.com">email</a></li>
 				</ul>
 			</footer>
 		</body>
