--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/images/photos/Carol_Iskiwitch_CV_Feb2018.pdf">CV</a></li>
 	        		<li><a href="/resources">Resources</a></li>
 	    		</ul>
 			</nav>
