--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 	    		<ul>
 				
 				<li><a href="mailto:caroliskiwitch@gmail.com">email</a></li>
-				<li> <a href="https://twitter.com/{{ site.twitter_username }}" onclick="_gaq.push(['_trackEvent', 'linkTo', 'twitter', this.href]);"><i class="fa fa-twitter"></i><span class="link-text">twitter</span></a></li>
+				<li> <a href="https://twitter.com/carolisk" onclick="_gaq.push(['_trackEvent', 'linkTo', 'twitter', this.href]);"><i class="fa fa-twitter"></i><span class="link-text">twitter</span></a></li>
 				</ul>
 			</footer>
 		</body>
