--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/Carol_Iskiwitch_CV_April2018.pdf">CV</a></li>
-	        		<li><a href="/resources">Resources</a></li>
+	        		<li><a href="/resources/index.html">Resources</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
